DOM exercise - Collapse fixes

--- a/05-01/collapse/style.css
+++ b/05-01/collapse/style.css
@@ -7,6 +7,7 @@
 }
 
 .collapse .c-head #arrow {
+    cursor: pointer;
     transition: 0.3s ease-in-out;
 }
 
